tests/lang/compile_fail/duplicate_alias.koja
alias HTTP.Headers
alias JSON.Encoder as Headers

fn main
  "unreachable".print()
end
